--- a/chap1-introduction.tex
+++ b/chap1-introduction.tex
@@ -4,7 +4,7 @@
 %% Restart the numbering to make sure that this is definitely page #1!
 \pagenumbering{arabic}
 
-Neutrinos are a class of neutral leptonic particle that, within the \gls{sm}, only interact via the weak interaction and gravity \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}. The idea of a neutrino was first proposed in 1930 by Pauli and wasn't experimentally confirmed until 1956 by Cowan and Reines \cite{Pauli_letter} \cite{cowan_and_reines_paper}. Two further types (or flavours) of neutrinos were discovered in 1962 and 2000 by the Alternating Gradient Synchrotron and the \Gls{donut} experiment respectively \cite{Muon_neutrino_discovery} \cite{DONUT}. 
+Neutrinos are a class of neutral leptonic particle that, within the \gls{sm}, only interact via the weak interaction and gravity \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}. The idea of a neutrino was first proposed in 1930 by Pauli and was not experimentally confirmed until 1956 by Cowan and Reines \cite{Pauli_letter} \cite{cowan_and_reines_paper}. Two further types (or flavours) of neutrinos were discovered in 1962 and 2000 by the Alternating Gradient Synchrotron and the \Gls{donut} experiment respectively \cite{Muon_neutrino_discovery} \cite{DONUT}. 
 
 Neutrinos were long thought to be massless, but results from the \gls{sk} collaboration in 1988 showed that the flavour of a neutrino may oscillate which disabused this idea \cite{SuperK_neutrino_oscillations}. Confirmation of neutrino oscillations required non-zero neutrino masses and also helped resolve the long standing \textit{Solar Neutrino Problem} and the \textit{Atmospheric Neutrino Anomaly} \cite{Homestake} \cite{Atmospheric_anomaly}. There are, however, still a number of open questions which are of interest to particle physics that are linked to neutrinos, such as; 
 \begin{itemize}
