--- a/chap6-valor_analysis_2.tex
+++ b/chap6-valor_analysis_2.tex
@@ -1,7 +1,7 @@
 \chapter{VALOR Oscillation Analysis Framework}
 \label{chap:VALOR}
 
-The VALOR framework is a neutrino fitting framework that was first developed for the \gls{t2k} experiment, but has since been adapted to also cover, Hyper-K, \gls{dune} and the \gls{sbn} program \cite{VALOR}.
+The VALOR framework is a neutrino fitting framework that was first developed for the \gls{t2k} experiment, but has since been adapted to also cover, Hyper-Kamiokande, \gls{dune} and the \gls{sbn} program \cite{VALOR}.
 
 Performing an analysis within VALOR involves a number of physics parameters that define a physics hypothesis (e.g. neutrino oscillations) and the relevant systematic uncertainties. Event rate predictions are constructed for the associated detector, beam and event sample. These predictions are constructed as a function of a kinematical variable for either a nominal scenario or with variations due to a physics hypothesis and/or systematic uncertainties. This approach allows for joint oscillation and systematic fits to be constructed from a binned likelihood fitting approach for a given event topology. Fits may be performed for individual detectors or for a combination of multiple detectors and may include any number of systematic uncertainties. 
 
@@ -12,7 +12,7 @@ The data inputs used for an oscillation analysis are mainly provided in the form
 \begin{itemize}
     \item[b] -- Beam configuration e.g. neutrino or anti-neutrino mode,
     \item[d] -- Detector e.g. \gls{sbnd}, \gls{microboone} or \gls{icarus},
-    \item[s] -- Topological event selection e.g. \nue CC-like or \numu CC-like,
+    \item[s] -- Topological event selection e.g. \nue CC-inclusive, \numu CC-inclusive,
     \item[m] -- True Reaction Mode e.g. \numu~CCQE, \nue~CC1$\pi^{\pm}$,
     \item[r] -- A bin in multi-dimensional reconstructed kinematic space e.g. $E_{\nu, reco}$,
     \item[t] -- A bin in multi-dimensional true kinematic space e.g. $E_{\nu, true}$,
@@ -42,17 +42,16 @@ In the limit of large statistics, quantities of the form $-2\lnOf{\lambda}$ have
     \chi^2_{tot} = -2(\lnOf{\lambda_{d;b;s}(\vec{\theta}, \vec{f})} + \lnOf{\lambda_{syst}(\vec{f})}).
 \end{equation}
 
-In order to create confidence regions, fits are performed between a certain \textit{Asimov} dataset and $n_{d;b;s}^{pred}$. The Asimov dataset is a dataset where all systematic parameters are set to their nominal values and serves as a proxy for data in cases where only simulations are considered. It has been shown that in the same limit as the $\chi^2$ approximation (in the limit of large statistics), the median of many toy \gls{mc} experiments is equivalent to the Asimov dataset. This allows the significance of a given hypothesis to be compared to the median one whilst only requiring one \textit{toy} experiment instead of needing to compute many toy \gls{mc} experiments \cite{Asimov_dataset}. Two types of confidence regions may be constructed; an \textit{exclusion} region and an \textit{allowed} region. Both regions show the area where the chosen model is either compatible or incompatible with the data. The difference is due to the input data which has either no oscillation signal (an exclusion region) or there is an injected signal (an allowed region). In the case of exclusion regions, the Asimov dataset corresponds to the case where no oscillation are observed which is the null-hypothesis and for allowed regions, the oscillation parameters are set to that of the injected signal. For the \glspl{mct}, the oscillation parameters are set to a given value and the systematic parameters, if any, are allowed to float.
+In order to create confidence regions, fits are performed between a certain \textit{Asimov} dataset and $n_{d;b;s}^{pred}$. The Asimov dataset is a dataset where all systematic parameters are set to their nominal values and serves as a proxy for data in cases where only simulations are considered. It has been shown that in the same limit as the $\chi^2$ approximation (in the limit of large statistics), the median of many toy \gls{mc} experiments is equivalent to the Asimov dataset. This allows the significance of a given hypothesis to be compared to the median one whilst only requiring one \textit{toy} experiment instead of needing to compute many toy \gls{mc} experiments \cite{Asimov_dataset}. Two types of confidence regions may be constructed; an \textit{exclusion} region and an \textit{allowed} region. Both regions show the area where the chosen model is either compatible or incompatible with the data. The difference is due to the input data which has either no oscillation signal (an exclusion region) or there is an injected signal (an allowed region). In the case of exclusion regions, the Asimov dataset corresponds to the case where no oscillation are observed which is the null-hypothesis and for allowed regions, the oscillation parameters are set to that of the injected signal. %For the \glspl{mct}, the oscillation parameters are set to a given value and the systematic parameters, if any, are allowed to float.
 
 \section{Oscillation Channels Within SBN}
 
 As was discussed in \SectionRef{sec:sbn_physics_capabilities}, the \gls{bnb} is \numu dominated with a small portion of \nue's present. In the presence of mixing with a light sterile neutrino 
-this would result in the disappearance of some percentage of the \numu's due to oscillations. Additionally, \numu to \nue oscillations would result in the increase of the number of \nue's present. Finally, the number of intrinsic \nue's present in the \gls{bnb} coupled with the large event rate \gls{sbn} will detect means there are sufficient statistics to observe the disappearance of some \nue's due to oscillations. This results in three possible oscillation channels, \numu disappearance, \nue appearance and \nue disappearance. The mixing angles which determine their respective oscillation probabilities are shown in Equations (\ref{eqn:sinsq2thmumu} -- \ref{eqn:sinsq2thee}) which also imply that the oscillation channels are coupled (that is the presence of non-zero \nue appearance also requires non-zero \numu disappearance and \nue disappearance). Despite this, currently the oscillation channels are treated completely independently. 
-In principle oscillations involving \nutau are also possible, but due to the high energy threshold required these are usually not expected to be observed with any significant statistics. The energy range of the \gls{bnb} above the \nutau threshold is of the order 1\%, but since the statistics in \gls{sbnd} are large this may be sufficient to observe \numu to \nutau appearance. Currently this channels is not considered in the analysis, but may be explored in future work \cite{tau_oscillations}.
+this would result in the disappearance of some percentage of the \numu's due to oscillations. Additionally, \numu to \nue oscillations would result in the increase of the number of \nue's present. Finally, the number of intrinsic \nue's present in the \gls{bnb} coupled with the large event rate \gls{sbn} will detect means there are sufficient statistics to observe the disappearance of some \nue's due to oscillations. This results in three possible oscillation channels, \numu disappearance, \nue appearance and \nue disappearance. The mixing angles which determine their respective oscillation probabilities are shown in Equations (\ref{eqn:sinsq2thmumu} -- \ref{eqn:sinsq2thee}) which also imply that the oscillation channels are coupled (that is the presence of non-zero \nue appearance also requires non-zero \numu disappearance and \nue disappearance). Despite this, currently the oscillation channels are treated completely independently. In principle oscillations involving \nutau are also possible, but due to the high energy threshold required these are usually not expected to be observed with any significant statistics. The energy range of the \gls{bnb} above the \nutau threshold is of the order 1\%, but since the statistics in \gls{sbnd} are large, this may be sufficient to observe \numu to \nutau appearance. Currently this channels is not considered in the analysis, but may be explored in future work \cite{tau_oscillations}.
 
 The \numu disappearance as well as both the \nue channels have already been explored by a number of different experiments. This has lead to tension due to the conflict between null-results from some experiments and the hints of possible mixing with light sterile neutrinos seen by others. 
 
-The \numu disappearance channels has for example been investigated by \gls{minos}/\gls{minos}+, \gls{miniboone}/\gls{sciboone} and the IceCube experiment. The combined results from the \gls{miniboone} and \gls{sciboone} collaborations and a \gls{miniboone} only analysis (along with other experimental results) are shown on the left of \FigureRef{fig:miniboone_sciboone_minos}. The exclusion contours from \gls{minos} and \gls{minos}+ are shown on the right of \FigureRef{fig:miniboone_sciboone_minos}, with the black line representing the data and the dashed blue line being the expected sensitivity \cite{MiniBooNE/SciBooNE_numu_disapp_contour} \cite{MINOS_numu_disapp_contour}. It should be noted that the results from \gls{minos} are shown as a function of $\sin^2{\theta}$ instead of $\sin^2{2\theta}$ which is used for most other results. The results from 8 years of IceCube data are shown in \FigureRef{fig:icecube} along with other experimental results. The left plot is the 90\% C.L. allowed region, whereas the right plot is the 99\% C.L. exclusion contour. The star in each plot represents the best fit point. The results depend on both $\theta_{24}$ and $\theta_{34}$, but the contours have been produced under the assumption that $\theta_{34} = 0$ \cite{IceCube_numu_disapp_contour}.
+The \numu disappearance channel has for example been investigated by \gls{minos}/\gls{minos}+, \gls{miniboone}/\gls{sciboone} and the IceCube experiment. The combined results from the \gls{miniboone} and \gls{sciboone} collaborations and a \gls{miniboone} only analysis (along with other experimental results) are shown on the left of \FigureRef{fig:miniboone_sciboone_minos}. The exclusion contours from \gls{minos} and \gls{minos}+ are shown on the right of \FigureRef{fig:miniboone_sciboone_minos}, with the black line representing the data and the dashed blue line being the expected sensitivity \cite{MiniBooNE/SciBooNE_numu_disapp_contour} \cite{MINOS_numu_disapp_contour}. It should be noted that the results from \gls{minos} are shown as a function of $\sin^2{\theta}$ instead of $\sin^2{2\theta}$ which is used for most other results. The results from 8 years of IceCube data are shown in \FigureRef{fig:icecube} along with other experimental results. The left plot is the 90\% C.L. allowed region, whereas the right plot is the 99\% C.L. exclusion contour. The star in each plot represents the best fit point. The results depend on both $\theta_{24}$ and $\theta_{34}$, but the contours have been produced under the assumption that $\theta_{34} = 0$ \cite{IceCube_numu_disapp_contour}.
 
 \begin{figure}[h!]
     \centering
@@ -70,7 +69,7 @@ The \numu disappearance channels has for example been investigated by \gls{minos
     \label{fig:icecube}
 \end{figure}
 
-For the \nue appearance channel, the allowed regions from the \gls{lsnd} and \gls{miniboone} experiments are shown in \FigureRef{fig:nue_app_external}, along with exclusion contours from experiments including, \gls{icarus}, \gls{karmen}, NOMAD, OPERA and E776 (which is combined with solar neutrino data)\cite{LSND_excess}\cite{MiniBooNE_nue_app_contour}\cite{icarus_nue_app_contour}\cite{KARMEN_nue_app_contour}\cite{NOMAD}\cite{OPERA}\cite{E776}. The \gls{lsnd} result are produced from a combination of neutrinos from decay at rest (DaR) $\pi^+$ as well as decay in flight (DiF) pions meaning appearance of both \nue and \nuebar are considered. \gls{miniboone} also observed both neutrino and anti-neutrinos from the \gls{bnb}, whereas the \gls{karmen} experiment considered the oscillations of \numubar exclusively and the remaining experiments mentioned considered the oscillations of \numu exclusively. \cite{LSND_KARMEN_nue_app_contour}.
+For the \nue appearance channel, the allowed regions from the \gls{lsnd} and \gls{miniboone} experiments are shown in \FigureRef{fig:nue_app_external}, along with exclusion contours from experiments including, \gls{icarus}, \gls{karmen}, NOMAD, OPERA and E776 (which is combined with solar neutrino data)\cite{LSND_excess}\cite{MiniBooNE_nue_app_contour}\cite{icarus_nue_app_contour}\cite{KARMEN_nue_app_contour}\cite{NOMAD}\cite{OPERA}\cite{E776}. The \gls{lsnd} result are produced from a combination of neutrinos from decay at rest (DaR) $\pi^+$ as well as decay in flight (DiF) pions meaning appearance of both \nue and \nuebar are considered. \gls{miniboone} also observed both neutrino and anti-neutrinos from the \gls{bnb}, whereas the \gls{karmen} experiment considered the oscillations of \numubar exclusively and the remaining experiments mentioned considered the oscillations of \numu exclusively \cite{LSND_KARMEN_nue_app_contour}.
 
 \begin{figure}[!h]
     \centering
@@ -90,15 +89,19 @@ Finally, the \nue disappearance channel has been investigated with allowed regio
 \end{figure}
 
 \newpage
+The remainder of this chapter will focus on the \nue channels. Some of the key results for the \numu channel are shown in \AppendixRef{app:numu_disapp} and a detailed discussion can be found in \cite{Rhiannon's_thesis}.
+
+
+\newpage
 \section{Systematic Uncertainties within SBN}
 
-The systematics that are considered as part of the current \gls{sbn} analysis have been detailed in \SectionRef{sec:syst_uncertainties}. Unless explicitly stated, efficiency uncertainties aren't considered due to their currently not being a general consensus on their magnitude. 
+The systematics that are considered as part of the current \gls{sbn} analysis have been detailed in \SectionRef{sec:syst_uncertainties}. Unless explicitly stated, efficiency uncertainties are not considered due to their currently not being a general consensus on their magnitude. 
 
 The systematics from the \gls{genie} and \gls{microboone} reweight packages are initially in the form of weights which correspond to variations of the parameter. Systematic uncertainties in this form can not be directly used in an oscillation analysis, but must instead first be processed internally, the details of which are described below.
 
 \subsection{Processing Systematic Uncertainties}\label{sec:systematic_validation}
 
-Many \textit{universes} are simulated, each with different weights associated to each of the systematic parameters. This allows the impact of varying systematic parameters on the event rate of neutrino interaction to be observed. If the systematic parameters are uncorrelated, the weights are simply an $n \sigma$ variation which is the value used in a given universe. For correlated parameters, the weights are due to a unique variation of all the correlated parameters of a given universe. Of the systematic uncertainties associated with either the \gls{genie} or \gls{microboone} reweight packages, only the neutrino production flux uncertainties which are listed in \TableRef{table:corr_flux} are correlated. All other parameters are uncorrelated. 
+Many \textit{universes} are simulated, each with different weights associated to each of the systematic parameters. This allows the impact of varying systematic parameters on the event rate of neutrino interactions to be observed. If the systematic parameters are uncorrelated, the weights are simply an $n \sigma$ variation which is the value used in a given universe. For correlated parameters, the weights are due to a unique variation of all the correlated parameters of a given universe. Of the systematic uncertainties associated with either the \gls{genie} or \gls{microboone} reweight packages, only the neutrino production flux uncertainties which are listed in \TableRef{table:corr_flux} are correlated. All other parameters are uncorrelated. 
 
 Depending on whether a given systematic parameter is correlated or not, the way that it is processed within VALOR is done in two different ways. For the uncorrelated parameters, a set of associated response functions which represent the impact on the event rate that tweaking a given systematic parameter will have are constructed. For each parameter, individual response functions are constructed for each combination of \textit{d, b, s, m, r} and \textit{t}. Each response function is a 13 knot spline which nominally represents the change in event rate from parameter variations ranging from \mbox{[-3, +3]$\sigma$} in 0.5$\sigma$ intervals. The response functions are constructed by first identifying the 12 universes which have a variation closest to each of the non-zero $\sigma$ intervals and then taking the ratio of the event rate from the selected universe in a \mbox{2D (r, t)} bin to the nominal event rate in that bin. By definition there will be a knot at 0$\sigma$ with a response of 1, however, in most cases the remaining 12 knots will not be exactly at 0.5$\sigma$ intervals. 
 
@@ -117,7 +120,7 @@ In order to establish that the systematic parameters are being correctly handled
     \item Generate N toy samples (typically 500 in order to match the total number of universes) with some set of systematic parameters randomly tweaked. The one sigma spread from all the toys is found. This is done for both VALOR and for the universe files and the results are compared. 
 \end{enumerate}
 
-As an example, the $+1\sigma$ variation for the $f_{HornCurrent}$, $f_{M_A^{CCRes}}$ and $f_{\Delta \rightarrow N \gamma}$ parameters from the \nue sample in \gls{sbnd} between the VALOR response functions and the universes are shown in \FigureRef{fig:+1sigma_variations}\footnote{The terms \textit{spline} and \textit{response function} are used interchangeably.}. A complete list of the $+3\sigma$ variation comparisons for all the uncorrelated systematic parameters in \gls{sbnd} are shown for the \nue appearance channel in \AppendixRef{app:single_parameter_variations}. In all cases there is either perfect agreement or differences of only up to a few tens of events. It should be noted that the event rate shown in the spectra used for validating the systematic parameters for the \nue channel is several orders of magnitude greater than the nominal event rates as seen in for example \FigureRef{fig:nominal_nue_spectra}. This is due to manually setting the oscillation parameters to $\sin^2{2\theta_{\mu e}} = 1$ and $\Delta m_{41}^2 = 100$ eV$^2$ which ensures that many of the events from the oscillated $\numu \rightarrow \nue$ sub-sample are processed which is required because the response functions are indexed by mode and therefore contributions from all the sub-samples are needed. Since oscillation and systematic effects commute, this approach is sufficient to correctly produce a complete set of response functions. In the nominal event rate spectra the assumption is that no oscillation occur so no events from the oscillated sample are included hence the much lower event rate. 
+As an example, the $+1\sigma$ variation for the $f_{HornCurrent}$, $f_{M_A^{CCRes}}$ and $f_{\Delta \rightarrow N \gamma}$ parameters from the \nue sample in \gls{sbnd} between the VALOR response functions and the universes are shown in \FigureRef{fig:+1sigma_variations}\footnote{The terms \textit{spline} and \textit{response function} are used interchangeably.}. A complete list of the $+3\sigma$ variation comparisons for all the uncorrelated systematic parameters in \gls{sbnd} are shown for the \nue channel in \AppendixRef{app:single_parameter_variations}. In all cases there is either perfect agreement or differences of only up to a few tens of events. It should be noted that the event rate shown in the spectra used for validating the systematic parameters for the \nue channel is several orders of magnitude greater than the nominal event rates as seen in for example \FigureRef{fig:nominal_nue_spectra}. This is due to manually setting the oscillation parameters to $\sin^2{2\theta_{\mu e}} = 1$ and $\Delta m_{41}^2 = 100$ eV$^2$ which ensures that many of the events from the oscillated $\numu \rightarrow \nue$ sub-sample are processed which is required because the response functions are indexed by mode and therefore contributions from all the sub-samples are needed. Since oscillation and systematic effects commute, this approach is sufficient to correctly produce a complete set of response functions. In the nominal event rate spectra, the assumption is that no oscillations occur, so no events from the oscillated sample are included hence the much lower event rate. 
 
 \begin{figure}[h!]
     \includegraphics[width = 0.49\textwidth, height = 0.56184\textwidth]{figures-chap6/tweak_nsigma_nue/horncurrent_FluxUnisim_nuelikeCChigh_1sigma_horncurrent_FluxUnisim.png}
@@ -131,7 +134,7 @@ As an example, the $+1\sigma$ variation for the $f_{HornCurrent}$, $f_{M_A^{CCRe
    }
 \end{figure}
 
-\FigureRef{fig:1sigma_variations_toys} shows a double ratio comparison from VALOR and the universes for the flux, proposal interaction and modern interaction systematic parameters. These plots are constructed by first finding the ratio between the 1$\sigma$ variation and the nominal using VALOR and the analogous ratio using the universe files. The double ratio is then constructed by taking the ratio of both the previous 1$\sigma$ ratios. There are some minor differences between the variation in VALOR and the universes, however, event perfect agreement isn't expected since the 1$\sigma$ variations are found by taking the average from many toy samples. Nevertheless, the disagreement is for the most part $< 1\%$ with a maximum of just over 2\%. 
+\FigureRef{fig:1sigma_variations_toys} shows a double ratio comparison from VALOR and the universes for the flux, proposal interaction and modern interaction systematic parameters. These plots are constructed by first finding the ratio between the 1$\sigma$ variation and the nominal using VALOR and the analogous ratio using the universe files. The double ratio is then constructed by taking the ratio of both the previous 1$\sigma$ ratios. There are some minor differences between the variations in VALOR and the universes, however, event perfect agreement is not expected since the 1$\sigma$ variations are found by taking the average from many toy samples. Nevertheless, the disagreement is for the most part $< 1\%$ with a maximum of just over 2\%. 
 
 
 
@@ -170,14 +173,14 @@ Impact of systematics
 Size of Signal
 \end{comment}
 
-In order to perform sensitivity calculations, the events are required to be binned in terms of a kinematical variable. Within this analysis the chosen kinematical variable is the reconstructed neutrino energy. 
+In order to perform sensitivity calculations, the events are required to be binned in terms of a kinematical variable, which is chosen to be the neutrino energy.
 
 The nominal event rates, event rates with an uncertainty envelope due to systematic uncertainties and the event rates due to an oscillation signal are discussed below for each \gls{sbn} detector. Additionally, the impact of the uncorrelated systematic parameters are quantified in terms of their effect on the oscillation parameters.
 
 
 \subsection{Nominal Event Rate Predictions}
 
-It has been established that there are two oscillations channels associated with \nue; \nue appearance and \nue disappearance. Since the only difference between these channels is due to oscillations, the nominal event rates are common between the two.
+It has been established that there are two oscillations channels associated with \nue: \nue appearance and \nue disappearance. Since the only difference between these channels is due to oscillations, the nominal event rates are common between the two.
 
 The breakdown of the nominal number of events by interaction mode and channel are shown numerically in \TableRef{table:sbnd_nue_event_rate}, \TableRef{table:uboone_nue_event_rate} and \TableRef{table:icarus_nue_event_rate} for \gls{sbnd}, \gls{microboone} and \gls{icarus} respectively. The same events rates are also shown in \FigureRef{fig:nominal_nue_spectra} in the form of spectra. The spectra show the modal breakdown in terms of the coarse reaction modes where the events have been binned in reconstructed neutrino energy. 
 
@@ -402,7 +405,7 @@ Assuming that mixing with a light sterile neutrino occurs, a change to the nomin
 
 \subsubsection{\texorpdfstring{\nue Appearance Analysis}{nue Appearance Analysis}}\label{sec:nue_app}
 
-The \nue appearance channel is concerned with oscillations from \numu to \nue and meaning an increase in the event rate is expected. This is shown in \FigureRef{fig:nue_spectra_with_osc_overlay} where the nominal event rate breakdown is shown as in \FigureRef{fig:nominal_nue_spectra}, but overlayed with and integrated spectrum that was produced with oscillation parameters \mbox{$\sin^2{2\theta_{\mu e}} = 0.003$} and $\Delta m^2_{41} = 1.32 \text{ eV}^2$. The oscillation signal seen for these parameters in \gls{sbnd} is small whereas for \gls{microboone} and \gls{icarus} it is substantial which is consistent with what is seen in \FigureRef{fig:osc_probability}. This highlights the fact that \gls{sbnd} will largely be used to constrain parameters due to observing no or very few oscillated events with the oscillation signal being largely left to \gls{microboone} and \gls{icarus}. 
+The \nue appearance channel is concerned with oscillations from \numu to \nue meaning an increase in the event rate is expected. This is shown in \FigureRef{fig:nue_spectra_with_osc_overlay} where the nominal event rate breakdown is shown as in \FigureRef{fig:nominal_nue_spectra}, but overlayed with and integrated spectrum that was produced with oscillation parameters \mbox{$\sin^2{2\theta_{\mu e}} = 0.003$} and $\Delta m^2_{41} = 1.32 \text{ eV}^2$. The oscillation signal seen for these parameters in \gls{sbnd} is small whereas for \gls{microboone} and \gls{icarus} it is substantial which is consistent with what is seen in \FigureRef{fig:osc_probability}. This highlights the fact that \gls{sbnd} will largely be used to constrain systematic parameters due to observing no or very few oscillated events with the oscillation signal being largely left to \gls{microboone} and \gls{icarus}. 
 
 
 \begin{figure}[h!]
@@ -418,7 +421,7 @@ The \nue appearance channel is concerned with oscillations from \numu to \nue an
 \end{figure}
 
 \newpage
-The top left plot of Figure~\ref{fig:Nue_app_spectra_ratios} shows the \nue appearance stat only exclusion contour and allowed region from fits combining all three \gls{sbn} detectors. The details of constructing sensitivity contours within \gls{sbn} are detailed in \SectionRef{sec:sensitivites}. The injected point $\Delta m^2_{41} = 1.32$ eV$^2$, $\sin^2{2\theta_{\mu e}} = 0.003$, used when producing the allowed region is shown along with two further points on the exclusion contour at $\Delta m^2_{41} = 1$ eV$^2$, $\sin^2{2\theta_{\mu e}} = 0.0014$ and $\Delta m^2_{41} = 100$ eV$^2$, $\sin^2{2\theta_{\mu e}} = 0.0005$. \nue appearance spectra are produced using oscillation parameters corresponding to each of these three points for each of the three SBN detectors. The ratio of each of these oscillated spectra to the nominal for each detector are shown in the the remaining plots in Figure~\ref{fig:Nue_app_spectra_ratios} and highlight the expected oscillation signal.
+The top left plot of Figure~\ref{fig:Nue_app_spectra_ratios} shows the \nue appearance statistical only exclusion contour and allowed region from fits combining all three \gls{sbn} detectors. The details of constructing sensitivity contours within \gls{sbn} are detailed in \SectionRef{sec:sensitivites}. The injected point $\Delta m^2_{41} = 1.32$ eV$^2$, $\sin^2{2\theta_{\mu e}} = 0.003$, used when producing the allowed region is shown along with two further points on the exclusion contour at $\Delta m^2_{41} = 1$ eV$^2$, $\sin^2{2\theta_{\mu e}} = 0.0014$ and $\Delta m^2_{41} = 100$ eV$^2$, $\sin^2{2\theta_{\mu e}} = 0.0005$. \nue appearance spectra are produced using oscillation parameters corresponding to each of these three points for each of the three SBN detectors. The ratio of each of these oscillated spectra to the nominal for each detector are shown in the the remaining plots in Figure~\ref{fig:Nue_app_spectra_ratios} and highlight the expected oscillation signal.
 
 
 \begin{figure}[h!]
@@ -448,7 +451,7 @@ Mirroring the \nue appearance channel, the \nue disappearance channel observes a
   }
 \end{figure}
 
-The top left plot of Figure~\ref{fig:nue_disapp_spectra_ratios} shows the \nue disappearance stat only exclusion contour and allowed region from fits combining all three \gls{sbn} detectors. The injected point \mbox{$\Delta m^2_{41} = 3$~eV$^2$}, $\sin^2{2\theta_{\mu e}} = 0.4$, used when producing the allowed region is shown along with two further points on the exclusion contour at \mbox{$\Delta m^2_{41} = 1$ eV$^2$}, $\sin^2{2\theta_{\mu e}} = 0.29$ and $\Delta m^2_{41} = 100$~eV$^2$, $\sin^2{2\theta_{\mu e}} = 0.085$. \nue disappearance spectra are produced using oscillation parameters corresponding to each of these three points for each of the three SBN detectors. The ratio of each of these oscillated spectra to the nominal for each detector are shown in the the remaining plots in Figure~\ref{fig:nue_disapp_spectra_ratios} and highlight the expected oscillation signal.
+The top left plot of Figure~\ref{fig:nue_disapp_spectra_ratios} shows the \nue disappearance statistical only exclusion contour and allowed region from fits combining all three \gls{sbn} detectors. The injected point \mbox{$\Delta m^2_{41} = 3$~eV$^2$}, $\sin^2{2\theta_{\mu e}} = 0.4$, used when producing the allowed region is shown along with two further points on the exclusion contour at \mbox{$\Delta m^2_{41} = 1$ eV$^2$}, $\sin^2{2\theta_{\mu e}} = 0.29$ and $\Delta m^2_{41} = 100$~eV$^2$, $\sin^2{2\theta_{\mu e}} = 0.085$. \nue disappearance spectra are produced using oscillation parameters corresponding to each of these three points for each of the three SBN detectors. The ratio of each of these oscillated spectra to the nominal for each detector are shown in the the remaining plots in Figure~\ref{fig:nue_disapp_spectra_ratios} and highlight the expected oscillation signal.
 
 \begin{figure}[h!]
     \centering
@@ -602,7 +605,7 @@ The relative contribution of the different systematic groups to the overall excl
 \end{figure}
 
 
-\subsection{Impact of Additional Efficiency Systematics}
+\subsection{Impact of Additional Efficiency Systematics}\label{Impact of Additional Efficiency Systematics}
 
 As was mentioned in \SectionRef{sec:other_syst}, efficiency systematics are not currently included in the \textit{standard} analyses. In order to get a measure of the possible impact of efficiency systematics on the sensitivity, various covariance matrices were produced following the scheme outlined in \SectionRef{sec:efficiency_syst}. Matrices were produced to investigate the impact of;
 \begin{enumerate}
@@ -615,7 +618,7 @@ Unless otherwise stated, the uncertainties from efficiency covariance matrices a
 
 The study on the impact of different efficiency uncertainties was first done for the \numu disappearance channel because it was expected that there would be a greater impact than for either of the \nue channels. This is because the typical event rate for the \numu channel is several order of magnitude greater than that of \nue meaning that the \numu channel is systematics limited whereas the \nue channels may tend towards being statistics limited. Once a contour becomes statistics limited, continuing to apply additional systematic uncertainties will begin to have diminishing impacts. 
 
-Sensitivities including efficiency uncertainties for the \numu disappearance channel are shown alongside the other figures in \ChapterRef{app:numu_disapp}. The impact of the efficiency uncertainties on both \nue channels is discussed below.
+Sensitivities including efficiency uncertainties for the \numu disappearance channel are shown alongside the other figures in \AppendixRef{app:numu_disapp}. The impact of the efficiency uncertainties on both \nue channels is discussed below.
 
 
 \subsubsection*{\texorpdfstring{Impact of Efficiency Systematics on \nue Appearance Sensitivities}{Impact of Efficiency Systematics on nue Appearance Sensitivities}}
@@ -647,7 +650,16 @@ The reduction in sensitivity from applying a 10\% correlated uncertainty and a 2
     \label{fig:nue_app_uncorrelated_per_detector}
 \end{figure}
 
-The impact of having a set of bins with a poorly constrained uncertainty was also studied using the same scheme that was outlined for the \numu case. Similar results were observed and are shown in \FigureRef{fig:nue_app_bulk_uncertainty}, albeit the change in sensitivity is much less prominent than for the \numu case. The background and low energy bins have the smallest impact with almost no visible difference whereas the peak and high energy bins do show some small reduction in the sensitivity. 
+%The impact of having a set of bins with a poorly constrained uncertainty was also studied using the same scheme that was outlined for the \numu case. Similar results were observed and are shown in \FigureRef{fig:nue_app_bulk_uncertainty}, albeit the change in sensitivity is much less prominent than for the \numu case. The background and low energy bins have the smallest impact with almost no visible difference whereas the peak and high energy bins do show some small reduction in the sensitivity. 
+
+Instead of exploring the impact from fully correlated uncertainties or a constant uncorrelated uncertainty across all bins in a detector, \FigureRef{fig:nue_app_bulk_uncertainty} considers the case where a single set of bins are poorly constrained. The sets of bins considered are,
+\begin{itemize}
+    \item CC signal below the peak energy ($< 0.6$ GeV),
+    \item CC signal at the peak energy ([0.6 - 1.0] GeV),
+    \item CC signal above the peak energy ($> 1.0$ GeV),
+    \item Background.
+\end{itemize}
+In each case, the uncorrelated uncertainty for the bins of interest are set to 2\% in each of the \gls{sbn} detectors, whilst the rest of the uncorrelated uncertainties are set to 0.5\% and the fully correlated uncertainty is fixed at 2\%. The background and low energy bins have the smallest impact with almost no visible difference whereas the peak and high energy bins do show some small reduction in the sensitivity at $\Delta m^2_{41}$ greater than 1 eV$^2$.
 
 \begin{figure}[h!]
     \centering
