--- a/preamble.tex
+++ b/preamble.tex
@@ -37,8 +37,8 @@
 \makeglossaries
 
 % add line numbers
-\usepackage{lineno}
-\linenumbers
+%\usepackage{lineno}
+%\linenumbers
 
 % sort out the captions
 \captionsetup{width = \textwidth}
