--- a/backmatter.tex
+++ b/backmatter.tex
@@ -14,3 +14,6 @@
 %% then you've clearly spent more time on the write-up than the 
 %% research ;-)
 %\printindex
+
+\input{Likely_Examiner_Questions}
+
