--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -11,13 +11,13 @@ The neutrino was first postulated in 1930 by Pauli in an attempt to explain the 
 \end{equation}
 where \textit{X} and \textit{Y} are the element undergoing the decay and the resultant element respectively. The continuous energy spectrum of the electron was puzzling as it was expected that the electron would always have a fixed kinetic energy and observing electrons with a range of energies appeared to violate energy conservation. Pauli theorised that in addition to the electron, a neutral particle was also emitted in beta decays and that the sum of the energy of the electron and this neutral particle would be constant \cite{Pauli_letter}.
 
-The (electron) neutrino wasn't experimentally confirmed until 1956 by Cowan and Reines who used a nuclear reactor as their neutrino source \cite{cowan_and_reines_paper}. Their detector consisted of two tanks of water in which cadmium chloride had been dissolved, interlaced between three tanks of liquid scintillator. When the electron anti-neutrinos would interact with protons in one of the water tanks via inverse beta decay, a neutron and positron would be produced. The positron would then quickly annihilate with an electron producing two gamma rays. The cadmium would absorb the neutron and then emit a single gamma ray. The liquid scintillator was surrounded by \Glspl{pmt} and the signal for the experiment was two gamma rays from the electron-positron annihilation shortly followed by another gamma ray from the absorption of the neutron \cite{cowan_and_reines_paper}.
+The (electron) neutrino was not experimentally confirmed until 1956 by Cowan and Reines who used a nuclear reactor as their neutrino source \cite{cowan_and_reines_paper}. Their detector consisted of two tanks of water in which cadmium chloride had been dissolved, interlaced between three tanks of liquid scintillator. When the electron anti-neutrinos would interact with protons in one of the water tanks via inverse beta decay, a neutron and positron would be produced. The positron would then quickly annihilate with an electron producing two gamma rays. The cadmium would absorb the neutron and then emit a single gamma ray. The liquid scintillator was surrounded by \Glspl{pmt} and the signal for the experiment was two gamma rays from the electron-positron annihilation shortly followed by another gamma ray from the absorption of the neutron \cite{cowan_and_reines_paper}.
 
 The second type of neutrino to be discovered was the muon neutrino by the Alternating Gradient Synchrotron at Brookhaven National Laboratory in 1962. The neutrinos were predominantly produced from charged pion decays which in turn were produced by firing a beam of protons at a beryllium target. The pions were directed in the direction of an iron wall during which they had the chance to decay. The iron wall was designed to absorb muons and other interacting particles. The resulting particles from neutrino interactions were then detected by an aluminium spark chamber located behind the shield. Of the selected events, the majority showed muon-like signatures (e.g. long tracks), with only a small number of events showing shower-like objects. The large disparity between the number of muon-like and electron-like events confirmed that at least two types of neutrino exist. That is the muon neutrino is distinct from the already discovered electron neutrino \cite{Muon_neutrino_discovery}. 
 
 Following the discovery of the tau lepton in 1975 by the SLAC National Accelerator Laboratory, the tau neutrino was predicted in order to mirror the structure of the electron and muon lepton both of which have an associated neutrino \cite{tau_lepton_discovery}. The existence of the tau neutrino was eventually confirmed by the \Gls{donut} experiment in 2000. The \Gls{donut} experiment used a neutrino beam created from the decay of charmed mesons produced by protons from the  Tevatron accelerator at \gls{fermilab}. Most of the tau neutrinos were produced from the decay of the $D_s$ meson and the decay from the resulting tau lepton \cite{DONUT}.
 
-The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z-boson since it's lifetime is dependent on the number of flavours. This was shown by the \gls{lep} experiment, which found the lifetime of the Z-boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the \gls{lsnd} and \gls{miniboone} experiments, the deficit of events observed by the \gls{sage} and \gls{gallex} detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z-boson if they have a mass greater than half that of the Z-boson and/or they do not weakly interact and hence don't contribute to the decay rate of the Z-boson \cite{Zboson_number_of_neutrinos}. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
+The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z-boson since it's lifetime is dependent on the number of flavours. This was shown by the \gls{lep} experiment, which found the lifetime of the Z-boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the \gls{lsnd} and \gls{miniboone} experiments, the deficit of events observed by the \gls{sage} and \gls{gallex} detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z-boson if they have a mass greater than half that of the Z-boson and/or they do not weakly interact and hence do not contribute to the decay rate of the Z-boson \cite{Zboson_number_of_neutrinos}. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
 
 \section{Overview of Neutrino Physics}\label{sec:neutrino_physics}
 
@@ -166,7 +166,7 @@ where $m_W$ is the mass of the \textit{W} boson and $m_Z$ is the mass of the \te
 It was shown experimentally by Wu that \gls{p} conservation is violated and later by Cronin and Fitch that \gls{cp} conservation is also violated \cite{Wu_experiment}\cite{Cronin_and_Fitch_experiment}. \gls{cp} violation is one of the Sakharov conditions required to have a matter-antimatter asymmetry in the universe, however, the amount of \gls{cp} violation seen in the quark sector is seemingly insufficient to explain the matter dominated universe that is  observed \cite{Sakharov_conditions}. There may also be \gls{cp} violation from the \gls{pmns} matrix in the lepton sector which could help explain the matter-antimatter asymmetry. However, the amount of \gls{cp} violation in the lepton sector, if any, is currently unknown \cite{leptonic_cp_violation}.  
 
 
-$j^{CC}_{weak}$ has the form of a vector-axial (V--A) interaction, where the vector current is given by $\overline{\psi}\gamma^\mu\psi$ and the axial current is given by $\overline{\psi}\gamma^\mu\gamma^5\psi$. The axial component remains unchanged under a parity transformation, whereas the sign of the vector component changes. Usually the square of the amplitude is of interest, which in short means taking the square of the weak current. This results in a squared vector and axial component plus a cross term. Since the axial and vector components behave differently under a parity transformation, this cross term leads to parity violation \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics} \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. $j^{NC}_{weak}$ doesn't have the form of a V--A interaction, but does again have both vector and axial components which lead to parity violation \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}.
+$j^{CC}_{weak}$ has the form of a vector-axial (V--A) interaction, where the vector current is given by $\overline{\psi}\gamma^\mu\psi$ and the axial current is given by $\overline{\psi}\gamma^\mu\gamma^5\psi$. The axial component remains unchanged under a parity transformation, whereas the sign of the vector component changes. Usually the square of the amplitude is of interest, which in short means taking the square of the weak current. This results in a squared vector and axial component plus a cross term. Since the axial and vector components behave differently under a parity transformation, this cross term leads to parity violation \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics} \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. $j^{NC}_{weak}$ does not have the form of a V--A interaction, but does again have both vector and axial components which lead to parity violation \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}.
 
 \begin{comment}
 Because the projection operator, $P_L$, appears in \EquationRef{eqn:weak current} it follows that weak interactions only apply to left-handed particles (and right-handed antiparticles).
@@ -368,6 +368,7 @@ Another key feature of \EquationRef{eqn:matter_mixing_angle} is that the matter 
 \newpage
 \section{Experimental Evidence for Sterile Neutrinos}\label{subchap:Motivation for Sterile Neutrinos}
 
+\begin{comment}
 \textcolor{red}{Other crap}
 Cosmology: $N_{eff} = (3.046 + \Delta N_{eff})$
 For any thermalised sterile neutrinos, $\Delta N_{eff} = 1, 2, 3 ...$
@@ -378,6 +379,7 @@ https://s3.cern.ch/inspire-prod-files-c/
 c6eedeb5b3b604ca58f1a237e1b36f30
 https://arxiv.org/pdf/1904.07108.pdf page 16
 https://journals.aps.org/prd/pdf/10.1103/PhysRevD.104.123524
+\end{comment}
 
 There have been a number of experimental results which are not consistent with oscillations in a three neutrino model. Most of these anomalous results can be explained by oscillations with one or more eV scale neutrinos pointing towards the existence of at least one light sterile neutrino. The experiments which have seen results seemingly in favour of eV scale sterile neutrinos will be discussed in the upcoming sections. There are however tensions between the results in favour of additional neutrino flavours and the null results from experiments such as \gls{karmen} and \gls{minos} \cite{Where_are_we_with_light_sterile_neutrinos}. The  \gls{karmen}  experiment  was  sensitive  to $\numu \rightarrow \nue$  and  $\numubar \rightarrow \nuebar$ over a baseline of 17.6 m.  No evidence of oscillations were found and a 90\% confidence level exclusion limit was placed on $\Delta m^2 > 100$ $eV^2$ with $\sin^2{2\theta} < 4\times 10^{-2}$ and $\sin^2{2\theta} < 8.5 \times 10^{-3}$ for neutrinos and anti-neutrinos respectively \cite{KARMEN}.  The \gls{minos} experiment used a predominantly muon-neutrino beam with a peak energy of 3 GeV with the near detector being at a baseline of 1.04 km.  Again, no evidence of oscillations was observed.  For a mass splitting of $\Delta m^2_{42} = 0.5$ eV$^2$, the value of $\sin^2{2\theta_{24}}$ was constrained to be less than 0.016 for a 90\% confidence level \cite{MINOS}.
 
@@ -466,7 +468,7 @@ In the general case, there are four neutrino fields, a left and right handed one
     \end{pmatrix}
     \twomatrix {\psi_L} {\psi_R^C} + h.c.
 \end{equation}
-where the central $4 \times 4$ matrix is known as the mass matrix, $\mathcal{M}$ \cite{White_Paper}. By diagonalising $\mathcal{M}$ into mass eigenstates, $m_1, m_2$, and assuming $m_L = 0$ (since it isn't allowed in the \gls{sm}) and that $m_R \gg m_D$, the mass eigenvalues may be expressed as
+where the central $4 \times 4$ matrix is known as the mass matrix, $\mathcal{M}$ \cite{White_Paper}. By diagonalising $\mathcal{M}$ into mass eigenstates, $m_1, m_2$, and assuming $m_L = 0$ (since it is not allowed in the \gls{sm}) and that $m_R \gg m_D$, the mass eigenvalues may be expressed as
 \begin{equation}
 \begin{split}
     m_1 \simeq \frac{m_D^2}{m_R} \\
